examples/reference/statement_cross_module_error.err
Assembly failed:
24: ERROR [asm402]
   24 |     PUSHB $AA           ; ERROR: PUSHB not imported
                        ^
ERROR: No instruction found for PUSHB
